# ARLDM-Advanced-Robot-Learning-And-Decision-Making

./: .gitignore  CONTRIBUTORS.md  Dockerfile_student  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.linux.json  devcontainer.wsl2.json
.github/workflows/: notebooks.yml  public_merge_check.yml
public/: .gitignore  Dockerfile_student  pyproject.toml
public/.devcontainer/: devcontainer.linux.json
public/src/: base_controller.py  utils_test.py
public/src/exercise01/: PD.py  exercise01.ipynb  return_true.py
public/src/exercise02/: lqr.py
public/src/exercise03/: exercise03.ipynb  linear_mpc.py  mpc_utils.py  noisy_obs_wrapper.py
public/src/exercise04/: exercise04.ipynb  plotting_utils.py
public/src/exercise05/: gpmpc.py  mpc.py  mpc_utils.py  plotting.py  replay_buffer.py  run_gpmpc.py
public/src/exercise06/: ppo.py  wrappers.py
src/exercise01/exercise01/: PD.py  exercise01.ipynb  lecture_notes.md  return_true.py
src/exercise01/test/behavior/: __init__.py  test_exercise01.py
src/exercise02/: exercise02.ipynb  ilqr.py  utils.py
src/exercise02/exercise02/: exercise02.ipynb  ilqr.py  lecture_notes.md  lqr.py  utils.py
src/exercise02/test/behavior/: exercise02_testdata.pkl  test_exercise02.py
src/exercise03/: nonlinear_mpc.py  ocp_setup.py
src/exercise03/configs/: sim_config.yaml
src/exercise03/exercise03/: PD.py  exercise03.ipynb  linear_mpc.py  mpc_utils.py  nonlinear_mpc.py  ocp_setup.py  utils.py
src/exercise03/exercise03/configs/: linear_mpc_config.yaml  nonlinear_mpc_config.yaml
src/exercise03/test/behavior/: test_exercise03.py
src/exercise04/: data_collection.py  gaussian_process.py  neural_network.py  utils.py
src/exercise04/exercise04/: data_collection.py  exercise04.ipynb  gaussian_process.py  neural_network.py  plotting_utils.py  ppo_checkpoint.pt  utils.py
src/exercise04/exercise04/outputs/: nn_checkpoint_ex04.ckpt  (+1 more)
src/exercise04/outputs/: state_transitions.pkl
src/exercise05/: __init__.py  exercise05.ipynb  gp.py  utils.py
src/exercise05/exercise05/: __init__.py  exercise05.ipynb  gp.py  gpmpc.py  mpc.py  mpc_utils.py  plotting.py  replay_buffer.py  run_gp_mpc.py  run_gpmpc.py  utils.py
src/exercise06/: agent.py  exercise06.ipynb  rand_traj_env.py  sweep.py
src/exercise06/exercise06/: exercise06.ipynb  ppo.py  ppo_checkpoint_DroneFigureEightTrajectory-v0.pt  ppo_checkpoint_DroneRandomTrajectory-v0.pt  ppo_checkpoint_DroneReachPos-v0.pt  ppo_checkpoint_ex06.pt  rand_traj_env.py  sweep.py  wrappers.py
(+9 files in other folders)
